--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-rembg
-pillow
-numpy
-onnxruntime
+streamlit>=1.31.0
+rembg>=2.0.53
+Pillow>=10.2.0
+numpy>=1.26.0
+onnxruntime>=1.16.0
+opencv-python-headless
