--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ streamlit>=1.31.0
 rembg>=2.0.53
 Pillow>=10.2.0
 numpy>=1.26.0
-onnxruntime>=1.16.0
+onnxruntime-cpu>=1.16.0
 opencv-python-headless
